--- a/mm_models_messy.ipynb
+++ b/mm_models_messy.ipynb
@@ -264,7 +264,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_x, test_x, train_y, test_y = train_test_split(x, y, test_size=0.2, random_state=99)"
+    "train_x, test_x, train_y, test_y = train_test_split(x, y, test_size=0.1, random_state=369)"
    ]
   },
   {
@@ -5637,7 +5637,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -5651,7 +5651,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
